fixed icons and scrollbar in windows

--- a/src/app/menubar/menubar.component.scss
+++ b/src/app/menubar/menubar.component.scss
@@ -2,6 +2,8 @@
 
 .fixed {
   position: fixed;
+  // windoof -.-
+  width: 72px;
   padding-left: 8px;
   padding-right: 8px;
 }
@@ -28,9 +30,5 @@
 }
 
 .svg {
-  margin: -70%;
-}
-
-.svg-icon {
   margin: -9%;
 }
